fixed fukd graphs with absolute positioning and visibility

--- a/static/style.css
+++ b/static/style.css
@@ -119,3 +119,6 @@ button{
     box-shadow:none!important;
 }
 
+.graph{
+    position:absolute;
+}
